Jakarta (#63)
* Prepare IFixes release 9.0.0.1 (#59)

* Decisions convergence (#48)

* Implement support for both Decisions products and refactoring

- Made service compatible with ODM and ADS
- Integrated metering model for simplified dependencies
- Renamed packages, options, produced jar file
- Adapted, refactored and reviewed documentation accordingly

* Update copyright notices

* Deliver next release - 8.12.0 (#45)

* Switch to the next version

* Change copyright year: DBACLD-90119

* Pre delivery 812 (#44)

* Prepare new release.

* increase time to run test

* Change liberty version for the next release

* Use a pre-deploy ruleset

* Adapt test after moving to the new rule set

* Prepare next delivery

* Update Chart.yaml - Fix bad odm version

* fix bad version

* Update test.sh

* Update docker-compose.yml Try to add network

* Update docker-compose.yml - Remove network

* Update build-and-test.yml

* Update build-and-test.yml debug

* Update test.sh

* Update test.sh

* Take the new jar file name into account

* Trigger new action build

---------

Co-authored-by: Anthony Acremann <anthony.acremann@fr.ibm.com>

* Prepare next release

* Update Liberty version

* Update build-and-test.yml

* Update build-and-test.yml

* Update build-and-test.yml - Revert

* Bad reference url

* Update build-and-test.yml - Change Liberty version

* Change for the next release

* Update build-and-test.yml

* Try to workaround issue DBACLD-118818

* Fix location

* Update Chart.yaml

* Update values.yaml

* Update values.yaml

* Move to the new release name 9.0.0

* Linter failed

* DBACLD-125217 Metering service does not store correctly the metrics

* Override delivery to fix issue

* New description for the dockerjub

* DBACLD-125376 Change copyright

* Dbacld 125217 (#50)

* Fix configuration of the service

* DBACLD-125217

* Try to fix Github action

* Fix initVaria